MOW-1410 jumpy bug fix + focus prev item after exiting submenu

--- a/web/src/main/resources/scss/menu-styles.scss
+++ b/web/src/main/resources/scss/menu-styles.scss
@@ -83,12 +83,6 @@ $menuWidth: 320px;
 					padding-left: 16px;
 				}
 			}
-		.menuItemGroupView {
-			width: 100%;
-			padding-right: 10px;
-			box-sizing: border-box;
-
-		}
 		.divider {
 			height: 1px;
 			margin: 8px 0px 8px 56px;
